<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo_login">Acceso al Sistema</string>
    <string name="user_login">Usuario</string>
    <string name="clave_login">Contraseña</string>
    <string name="button_acceso">Ingresar</string>
    <string name="button_salir">Salir</string>
    <string name="saldo">Cuenta</string>


    <string name="cuenta">Cuenta</string>

    <string name="bscompra">Compra</string>
    <string name="bsrecarga">Recarga</string>

    <string name="bsreport">Reporte</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="btnaceptar">Aceptar</string>
    <string name="btnvolver">Volver</string>

    <string name="rdalimento">Alimento</string>
    <string name="rdvestido">Vestido</string>
    <string name="rdstudio">Estudio</string>
    <string name="rdocio">Ocio</string>

    <string name="rpgasto">Resporte de Gastos</string>
    <string name="dospuntos">:</string>



    <string-array name="menu">
        <item>GASTOS</item>
        <item>TRANSACCIONES</item>
        <item>RECARGA</item>
    </string-array>
    <string-array name="menu2">
        <item>ALIMENTO</item>
        <item>VESTIMENTA</item>
        <item>ESCOLAR</item>
        <item>OCIO</item>
    </string-array>
    <string-array name="menu3">
        <item>EN GENERAL</item>
        <item>ALIMENTO</item>
        <item>VESTIMENTA</item>
        <item>ESCOLAR</item>
        <item>OCIO</item>
    </string-array>


    <string name="title_activity_home">Home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_compra">Compra</string>
    <string name="title_activity_recarga">Recarga</string>
    <string name="title_activity_reporete">Reporte</string>

</resources>
