<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#88f4c5">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Transacciones"
            android:id="@+id/textView"
            android:textStyle="bold|italic"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="13dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Monto"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/monto"
            android:background="#ffffff"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView3"
            android:layout_marginLeft="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="N° Cuenta"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/numCuenta"
            android:background="#ffffff"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/monto"/>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdalimento"
                android:id="@+id/radioButton"
                android:checked="false"
                android:layout_below="@+id/textView3"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignRight="@+id/numCuenta"
                android:onClick="setRadio"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdvestido"
                android:id="@+id/radioButton2"
                android:checked="false"
                android:layout_below="@+id/radioButton"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignRight="@+id/numCuenta"
                android:onClick="setRadio"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdstudio"
                android:id="@+id/radioButton3"
                android:checked="false"
                android:layout_below="@+id/radioButton2"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignRight="@+id/numCuenta"
                android:onClick="setRadio"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdocio"
                android:id="@+id/radioButton4"
                android:checked="false"
                android:layout_below="@+id/radioButton3"
                android:layout_alignLeft="@+id/textView3"
                android:onClick="setRadio"/>

    </RadioGroup>





    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnaceptar"
            android:id="@+id/button"
            android:layout_above="@+id/button2"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:onClick="realizarCompra"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnvolver"
            android:id="@+id/button2"
            android:onClick="volverHomeCompra"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"/>

    alimento vestimenta escolar ocio


</RelativeLayout>

